# semantic-kernel

./: .editorconfig  .env.local.template  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  AI.ipynb  BR-AI.txt  CODEOWNERS  COMMUNITY.md  CONTRIBUTING.md  DESIGN.md  DEV_SETUP.md  Dockerfile  Document(microsoft.com).rtf  FEATURE_MATRIX.md  FEATURE_PARITY.md  GLOSSARY.md  LICENSE  Makefile  PROMPT_TEMPLATE_LANGUAGE.md  Program.cs  README.md  SECURITY-01J61242EAQ4X95NFYMEYY0EEG.md  SECURITY.md  TRANSPARENCY_FAQS.md  Untitled.ipynb  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  __azurite_db_table__.json  app.ipynb  app.py  application file  build.sh  compliance.yml  conda.yaml  config.json  consumer.robot  (+28 more)
python/: .coveragerc  .cspell.json  .editorconfig  .env.example  .example.settings.yaml  .flake8  .pre-commit-config.yaml  DEV_SETUP-01J6KN9VB82HSJP9RRTDE1D75N.md  DEV_SETUP.md  FEATURE_PARITY.md  Makefile  README.md  Untitled.ipynb  fake_file.py  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt  setup_dev.sh
python/.conf/: .pre-commit-config.yaml  flake8.cfg  packages_list.json
python/.github/actions/: python-test-coverage.yml  python-unit-tests.yml
python/examples/: voyage_ai_multimodal_example.py  voyage_ai_reranker_example.py  voyage_ai_text_embedding_example.py
python/notebooks/: .env.example  .gitignore  00-getting-started.ipynb  01-basic-loading-the-kernel.ipynb  02-running-prompts-from-file.ipynb  03-prompt-function-inline.ipynb  03-semantic-function-inline.ipynb  04-context-variables-chat.ipynb  04-kernel-arguments-chat.ipynb  05-using-the-planner.ipynb  06-memory-and-embeddings.ipynb  07-hugging-face-for-plugins.ipynb  07-hugging-face-for-skills.ipynb  08-native-function-inline.ipynb  09-groundedness-checking.ipynb  10-multiple-results-per-prompt.ipynb  11-streaming-completions.ipynb  12-assistants.ipynb  12-sk-autogen-agents.ipynb  services.py
python/notebooks/Assistants/: ParrotAssistant.yaml  ToolAssistant.yaml
python/notebooks/planning/: autogen_planner.py
python/notebooks/plugins/: aml_connector.py  bing_connector.py  gmail_connector.py  imap_connector.py  sk_aml_plugin.py  sk_bing_plugin.py  sk_email_plugin.py  sk_web_pages_plugin.py
python/pip/: README.md
python/samples/: README.md  SAMPLE_GUIDELINES.md  service_settings.py  sk_service_configurator.py  test.py  utils.py
python/samples/00-kernel-syntax-examples/: google_search_skill.py  memory.py
python/samples/01-Semantic-Functions/: .gitignore  README.md  main.py
python/samples/02-Native-Functions/: README.md  main.py
python/samples/03-Chaining-Functions/: README.md  main.py
python/samples/04-Planner/: README.md
python/samples/agent_collaboration_example/: README.md  mainCode.py
python/samples/concepts/: README.md
python/samples/cross_language_tests/: test_1.py  test_2.py  test_4.py  test_5.py  test_6.py
python/samples/demos/: README.md
python/samples/documentation_examples/: .env.example  README.md  ai_services.py  configuring_prompts.py  creating_functions.py  evaluate_with_prompt_flow.py  functions_within_prompts.py  improved_evaluate_with_prompt_flow.py  planner.py  plugin.py  prompts.py  serializing_prompts.py  service_configurator.py  templates.py  using_the_kernel.py
python/samples/getting_started/: .env.example  00-getting-started.ipynb  01-basic-loading-the-kernel.ipynb  02-running-prompts-from-file.ipynb  03-prompt-function-inline.ipynb  04-kernel-arguments-chat.ipynb  05-memory-and-embeddings.ipynb  05-using-the-planner.ipynb  06-memory-and-embeddings.ipynb  07-hugging-face-for-plugins.ipynb  07-native-function-inline.ipynb  08-groundedness-checking.ipynb  08-native-function-inline.ipynb  09-groundedness-checking.ipynb  09-multiple-results-per-prompt.ipynb  10-multiple-results-per-prompt.ipynb  10-streaming-completions.ipynb  11-streaming-completions.ipynb  CONFIGURING_THE_KERNEL-01J6KN9VB82HSJP9RRTDE1D75N.md  CONFIGURING_THE_KERNEL.md  Evaluate_SK_AzureAIAgent.ipynb  Evaluate_SK_AzureOpenAIAssistantAgent.ipynb  services.py
python/samples/getting_started_with_agents/: README.md  step10_assistant_tool_file_search.py  step1_agent.py  step2_plugins.py  step3_chat.py  step3_openai_assistant_agent.py  step4_kernel_function_strategies.py  step5_json_result.py  step6_logging.py  step7_assistant.py  step8_assistant_vision.py  step8_openai_assistant_agent.py  step9_assistant_tool_code_interpreter.py
python/samples/getting_started_with_processes/: README.md  step01_processes.py
python/samples/kernel-syntax-examples/: action_planner.py  ad_auth.py  azure_ai_search_memory.py  azure_chat_gpt_api.py  azure_chat_gpt_api_handlebars.py  azure_chat_gpt_api_jinja2.py  azure_chat_gpt_api_with_filter.py  azure_chat_gpt_api_with_hooks.py  azure_chat_gpt_with_data_api.py  azure_chat_gpt_with_data_api_cross_lingual.py  azure_chat_gpt_with_data_api_function_calling.py  azure_chat_gpt_with_data_api_vector_search.py  azure_chat_sync_invoke_with_loop.py  azure_chat_with_your_data.py  azure_cognitive_search_memory.py  azure_openai_function_calling_stepwise_planner.py  bing_plugin_examples.py  bing_search_plugin.py  bing_search_skill.py  chat.py  data_skill.py  (+43 more)
python/semantic_kernel/: __init__.py  const.py  kernel.py  kernel_base.py  kernel_builder.py  kernel_config.py  kernel_exception.py  kernel_pydantic.py  kernel_types.py  settings.py  sk_pydantic.py
python/tests/: basics.py  chat.py  chat_gpt_api.py  conftest.py  memory.py  test_config.py  test_file_io_skill.py  test_modelslab_chat_completion.py  test_planner.py  test_planner_skill.py  test_sk_function_decorators.py  test_text_skill.py  test_time_skill.py  test_unit_cosine_similarity.py  utils.py
rust/: Cargo.toml  INSTALL.md  README.md
rust/examples/: greet_prompt.prompt  math_plugin.rs  semantic_greet.rs
rust/semantic_kernel/: Cargo.toml
rust/sk-agent/: Cargo.toml
rust/sk-macros/: Cargo.toml
rust/sk-memory/: Cargo.toml
rust/sk-openai/: Cargo.toml  README.md
rust/sk-plan/: Cargo.toml
rust/sk-process/: Cargo.toml
(+29680 files in other folders)
