[package]
name = "agent_chat"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Agent Framework example - Two agents handing off a customer request"

[[bin]]
name = "agent_chat"
path = "agent_chat.rs"

[dependencies]
semantic_kernel = { path = "../../semantic_kernel" }
sk-agent = { path = "../../sk-agent" }
sk-openai = { path = "../../sk-openai" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }