[package]
name = "getting_started_with_text_search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "step01_web_search"
path = "step01_web_search.rs"

[[bin]]
name = "step01_text_search"
path = "step01_text_search.rs"

[[bin]]
name = "step02_text_analysis"
path = "step02_text_analysis.rs"

[[bin]]
name = "step04_search_with_rag"
path = "step04_search_with_rag.rs"

[dependencies]
semantic_kernel = { path = "../../semantic_kernel" }
sk-openai = { path = "../../sk-openai" }
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
regex = "1.10"
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }