[package]
name = "invoice_process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Invoice processing workflow example using SK Process Framework"

[[bin]]
name = "invoice_process"
path = "invoice_process.rs"

[dependencies]
semantic_kernel = { path = "../../semantic_kernel" }
sk-process = { path = "../../sk-process" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
serde_json.workspace = true
async-trait.workspace = true