[project]
name = "sk-mcp-auth"
version = "0.1.0"
description = "A simple example of a OAuth client connection with SK."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "click>=8.0.0",
    "semantic-kernel[mcp]",
]

[project.scripts]
agent = "agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.pyright]
include = ["agent"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.379", "pytest>=8.3.3", "ruff>=0.6.9"]
